
ChangeLog
   [ + added, - removed, * changed ]

   * (10/Jun/2011) Improved CUDA support
   * (07/Jun/2011) BG/P fails to execute PAPI_read in PAPI_read when using time
                   sampling (fixed by additional logic & avoiding read inside).
   * (07/Jun/2011) --sort-addresses is enabled by default
   * (07/Jun/2011) Fixed emitting flush events in between multiple events
                   through routines Backend_Enter_Instrumentation and
                   Backend_Leave_Instrumentation. This should avoid most
                   Skipping state with negative duration messages at mpi2prv.
   * (07/Jun/2011) Fixed hwc set change when mixing changeat-time and
                   changeat-globalops within the XML config file
   * (07/Jun/2011) Linux/amd64 can rely on libc to call backtrace instead of
                   requiring libunwind
   + (02/Jun/2011) Added initial (& very limited) CUDA instrumentation (through --enable-cuda)
   * (30/May/2011) Added time sampling capabilities (doc, xml, and source changes)
   * (02/May/2011) Honor $DESTDIR in make install
   + (15/Apr/2011) Import initial sampling support based on alarm (2).
   + (05/Apr/2011) Additional support for pthread library
   * (31/Mar/2011) Fix for matching user communications in merger.
   * (28/Mar/2011) Support for XL -qdebug=function_trace
   * (23/Mar/2011) Several fixes to revive CBEA support
   * (22/Mar/2011) Increase buffer size to 500k elements
   * (03/Mar/2011) Fix communication between threads (i.e. task != 1 is sending
                     or receiving)
                   Differentiate MPI_Init_thread per C/Fortran (Fortran
                     implementation may be missing but C available)
   * (24/Feb/2011) Fix typo in Extrae_fini that prevented tracing applications in fortran
   + (02/Feb/2011) Added example of dynamic load instrumentation in AIX
   * (01/Feb/2011) Bug solved: looking for hw signals in PAPI 4.x